# TraceBasicBlocks

./: CMakeLists.txt  runtime.c  set-env.sh  tracebb.sh
examples/: :q  foo.bc  foo.c  foo_instrumented  foo_instrumented.bc  foo_instrumented.ll  foo_instrumented.s
tracer/: CMakeLists.txt  tracer.cpp
